[project]
name = "jax-codex"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "CoDeX authors" }]
maintainers = [{ name = "Johannes Ballé", email = "jballe@google.com" }]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: Apache Software License",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Libraries",
]
keywords = [
  "compression",
  "data-compression",
  "machine-learning",
  "deep-learning",
]
dependencies = ["jax ~=0.9,>=0.9.0.1", "chex >=0.1.91,<0.2"]
dynamic = ["version", "description"]

[dependency-groups]
dev = ["flit >= 3.12.0,<4", "ruff", "basedpyright", "pytest"]

[project.urls]
homepage = "https://github.com/google/codex"
repository = "https://github.com/google/codex"

[build-system]
requires = ["flit_core >=3.12.0,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "codex"

[tool.flit.sdist]
include = ["**/*.so"]
exclude = ["**/*.bazel", "**/*.cc", "**/*.h"]

[tool.ruff]
line-length = 120
unsafe-fixes = true
fix = true

[tool.ruff.lint]
preview = true

[tool.ruff.format]
preview = true
quote-style = "single"

[tool.basedpyright]
typeCheckingMode = "basic"

[tool.isort]
line_length = 120
multi_line_output = 9
